finished model, control and routes for projects and activities
