# backend/src/models/activity.js
@@ -1,6 +1,7 @@
 const Sequelize = require('sequelize')
 const db = require('./database.js')
 const projects = require('./projects.js')
+
 const activities = db.define('activities', {
   id: {
     primaryKey: true,
@@ -14,6 +15,31 @@ const activities = db.define('activities', {
     },
     unique: true
   },
+  briefDescription: {
+    type: Sequelize.TEXT
+  },
+  description: {
+    type: Sequelize.TEXT
+  },
+  date: {
+    type: Sequelize.DATE,
+    allowNull: false
+  },
+  location: {
+    type: Sequelize.STRING(128)
+  },
+  remainingPlaces: {
+    type: Sequelize.INTEGER,
+    allowNull: false,
+    defaultValue: 0,
+    validate: {
+      min: 0
+    }
+  },
+  link: {
+    type: Sequelize.STRING(128),
+    defaultValue: ''
+  },
   projectId: {
     type: Sequelize.INTEGER,
     references: {
@@ -22,6 +48,12 @@ const activities = db.define('activities', {
     },
     onDelete: 'CASCADE',
     onUpdate: 'CASCADE'
+  },
+  activityNumber: {
+    type: Sequelize.INTEGER,
+    allowNull: false,
+    defaultValue: 1
   }
 }, { timestamps: false })
+
 module.exports = activities
